# Music-API

./: .gitignore  README.md  pyproject.toml  requirements.txt
server/music/: admin.py  managers.py  mixins.py  models.py
server/music/api/: serailizers.py  urls.py  views.py
server/music/migrations/: 0001_initial.py  0002_album.py  0003_song.py  0004_remove_song_album_song_albums.py  0005_remove_song_albums_remove_song_position_position.py  0006_alter_position_album.py  0007_alter_position_song.py  0008_album_songs.py  0009_rename_position_albumsong.py
server/music/tests/: test_models.py  test_serializers.py  test_views.py
server/server/: example.env  settings.py  urls.py  yasg.py
