[tool.poetry]
name = "music api"
version = "0.1.0"
description = "Test task for building a simple API"
authors = ["Evan <evanmadjar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
django-environ = "^0.9.0"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
